[184] made sure compiles and runs with java11
Signed-off-by: Andre Dietisheim <adietish@redhat.com>