@@ -11,9 +11,10 @@
 	<name>Runtime Server Protocol</name>
 
 	<properties>
-		<tycho-version>1.2.0</tycho-version>
+		<tycho-version>1.3.0-SNAPSHOT</tycho-version>
 		<jacoco.version>0.8.2</jacoco.version>
 		<jacoco.reportRoot>${session.executionRootDirectory}/target</jacoco.reportRoot>
+		<moduleProperties></moduleProperties>
 	</properties>
 
 	<modules>
@@ -91,6 +92,9 @@
 				<groupId>org.eclipse.tycho</groupId>
 				<artifactId>tycho-surefire-plugin</artifactId>
 				<version>${tycho-version}</version>
+				<configuration>
+					<argLine>${moduleProperties}</argLine>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
@@ -107,6 +111,18 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<profiles>
+		<profile>
+			<id>jdk9</id>
+			<activation>
+				<jdk>[9</jdk>
+			</activation>
+			<properties>
+				<moduleProperties>--add-modules=ALL-SYSTEM</moduleProperties>
+                        </properties>
+                </profile>
+	</profiles>
 
 	<pluginRepositories>
 		<pluginRepository>
